# trace

./: .clang-format  .gitignore  CMakeLists.txt  issue.txt
.devcontainer/: devcontainer.json
cases/: expect.c  extract_btf.c
ebpf/headers/: 00_common_defs.h  00_compat.h  00_events.h  00_if_vlan.h  00_jhash.h  00_packet_filter.h  00_retis_context.h  01_common_defs.h  01_meta_filter.h  common.h  common_defs.h  compat.h  events.h  helpers.h  if_vlan.h  jhash.h  meta_filter.h  netlink.h  ovs_common.h  ovs_operation.h  ovs_uapi.h  packet_filter.h  retis_context.h  skb_tracking.h  user_common.h  vmlinux.h
ebpf/headers/aarch64/: vmlinux.h
ebpf/headers/bpf/: bpf_core_read.h  bpf_endian.h  bpf_gen_internal.h  bpf_helper_defs.h  bpf_helpers.h  bpf_tracing.h  update.sh
ebpf/headers/x86_64/: vmlinux.h
ebpf/src/ct/: ct.bpf.c
ebpf/src/kernel/: 02_kretprobe.bpf.c  03_raw_tracepoint.bpf.c  kprobe.bpf.c  kretprobe.bpf.c  raw_tracepoint.bpf.c
ebpf/src/nft/: 07_nft.bpf.c  nft.bpf.c  struct.md
ebpf/src/ovs/: kernel_enqueue.bpf.c  kernel_exec_actions.bpf.c  kernel_exec_actions_ret.bpf.c  kernel_exec_tp.bpf.c  kernel_upcall_ret.bpf.c  kernel_upcall_tp.bpf.c  user_op_exec.bpf.c  user_op_put.bpf.c  user_recv_upcall.bpf.c
ebpf/src/skb/: 04_skb_hook.bpf.c  05_skb_drop_hook.bpf.c  06_tracking_hook.bpf.c  skb_hook.bpf.c
ebpf/src/user/: usdt.bpf.c
